--- a/WanderLust/package.json
+++ b/WanderLust/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^8.12.2",
     "nodemon": "^3.1.9",
     "npm": "^11.3.0",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
   }
